# PyTriangulation_IRMP

./: .gitignore  CMakeLists.txt  README.md
src/IRMP/: camera.cpp  triangulation.cpp  triangulation.h
src/pyIRMP/: camera.cpp  main.cpp  triangulation.cpp
